# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.16

  - WL#12460, DevAPI: Support new session reset functionality.

  - WL#12459, DevAPI: Support connection-attributes.

  - Fix for Bug#25650385, GETBYTE() RETURNS ERROR FOR BINARY() FLD.

  - Fix for Bug#27784363, MYSQL 8.0 JDBC DRIVER THROWS NUMBERFORMATEXCEPTION FOR TEXT DATA

  - Fix for Bug#93007 (28860051), LoadBalancedConnectionProxy.getGlobalBlacklist bug.

  - Fix for Bug#29186870, CONNECTOR/J REGRESSION: NOT RETURNING PRECISION GETPROCEDURECOLUMNS.

  - Fix for Bug#22038729, X DEVAPI: ANY API CALL AFTER A FAILED CALL PROC() RESULTS IN HANG.

  - Fix for Bug#29244101, ADD MAPPING FOR UTF8MB4_ZH_0900_AS_CS COLLATION.

  - Fix for Bug#92819 (28834959), EXPRPARSER THROWS WRONGARGUMENTEXCEPTION WHEN PARSING EMPTY JSON ARRAY.

  - Fix for Bug#21921956, X DEVAPI: EXPRESSION PARSE ERROR WITH UNARY OPERATOR.

  - Fix for Bug#94031 (29257922), WRONG JSON_UNQUOTE WORKAROUND.

  - Fix for Bug#22931700, BINDINGS.GETBOOLEAN() ALWAYS RETURNS FALSE.

  - Fix for Bug#25650912, ERROR MESSAGE NOT CLEAR WHEN WE PASS A CHAR DATA TO ANY TABLE API.

  - Fix for Bug#25642021, CHANGEUSER() FAILS WHEN ENABLEPACKETDEBUG=TRUE.

Version 8.0.15

  - Fix for Bug#94051 (29261254), Not recommended default for 'allowLoadLocalInfile'.

Version 8.0.14

  - WL#12298, Connectors: Expose metadata about source and binaries in unified way.

  - Fix for Bug#93111 (28894344), ConnectionUrl.java contains char U+00A7 (section sign).

  - WL#12621, DevAPI: Handling of Default Schema.

  - Fix for Bug#93340 (28970166), C/J BUILD SCRIPT IS TOO VERBOSE

  - WL#12462, DevAPI: Be prepared for initial notice on connection.

  - Fix for Bug#28924137, WL#12463:IF COLLECTION DOESN'T EXIST, COLL.COUNT() IS GIVING A WRONG ERROR MESSAGE.

  - WL#12463, DevAPI: Standardize count method.

  - Fix for Bug#92508 (28747636), mysql-connector in bootclasspath causing memory leak.
