@@ -536,7 +536,6 @@ SocketMetadata.0=Using 'host' value of ''{0}'' to determine locality of connecti
 SocketMetadata.1=Locally connected - HostAddress({0}).equals(whereIconnectedTo({1})
 SocketMetadata.2=Attempted locally connected check failed - ! HostAddress({0}).equals(whereIconnectedTo({1})
 SocketMetadata.3=Remote socket address {0} is not an inet socket address
-SocketMetadata.4=No port number present in 'host' from SHOW PROCESSLIST ''{0}'', unable to determine whether locally connected
 
 Statement.0=Connection is closed.
 Statement.2=Unsupported character encoding ''{0}''
